[tool.poetry]
name = "better-u-bot"
version = "0.1.0"
description = ""
authors = ["Your Sexy Self <hottie@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-telegram-bot = "13.15"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"